<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_orange"
    tools:context=".LoginActivity">

    <!--Is the email field the id:logInEmail -->
    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />

    <!--Is the Password field the id:inPass -->

    <!-- This button takes you to the home of the app id:logIn-->

    <!-- This button takes your to a sign up page id:signUP-->

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/field_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mynavyblue"
        android:textColorHint="@color/mynavyblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeader" />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="10dp"
        android:width="300dp"
        android:background="@drawable/text_box"
        android:ems="10"
        android:hint="@string/field_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mynavyblue"
        android:textColorHint="@color/mynavyblue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="292dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:width="200dp"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPass" />
    <!--
        <TextView
            android:id="@+id/signupMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/no_acc"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="292dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:width="200dp"
            android:text="@string/btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupMsg" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>